# mcp-memos

./: .gitignore  .mcpbignore  .mise.toml  .pre-commit-config.yaml  README.md  manifest.json  pyproject.toml  server.json
.github/workflows/: python-app.yaml  release.yml
src/mcp_memos/: __init__.py  __main__.py  cli.py  client.py
src/mcp_memos/api/v1/: activity_service_pb2.py  activity_service_pb2.pyi  activity_service_pb2_grpc.py  attachment_service_pb2.py  attachment_service_pb2.pyi  attachment_service_pb2_grpc.py  auth_service_pb2.py  auth_service_pb2.pyi  auth_service_pb2_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  idp_service_pb2.py  idp_service_pb2.pyi  idp_service_pb2_grpc.py  inbox_service_pb2.py  inbox_service_pb2.pyi  inbox_service_pb2_grpc.py  markdown_service_pb2.py  markdown_service_pb2.pyi  markdown_service_pb2_grpc.py  memo_service_pb2.py  memo_service_pb2.pyi  memo_service_pb2_grpc.py  shortcut_service_pb2.py  shortcut_service_pb2.pyi  shortcut_service_pb2_grpc.py  user_service_pb2.py  user_service_pb2.pyi  user_service_pb2_grpc.py  workspace_service_pb2.py  workspace_service_pb2.pyi  workspace_service_pb2_grpc.py
tests/: conftest.py  mock.py  test_mcp.py
